# speech_recognization_app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
Malango/: .env.sample  .flake8  app.py
Malango/config/: settings.py
Malango/static/js/: index.js
Malango/templates/: _base.html  index.html
Malango/templates/includes/: navbar.html
Malango/utils/: hleper.py
static/js/: index.js
templates/: _base.html  index.html
