[tool.poetry]
name = "speech-recognization-app"
version = "0.1.0"
description = ""
authors = ["ario <cybera.3s@gmail.com>"]
readme = "README.md"
packages = [{include = "speech_recognization_app"}]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
flask = "2.2.2"
future = "0.18.2"
idna = "3.4"
importlib-metadata = "5.1.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
requests = "2.28.1"
urllib3 = "1.26.13"
werkzeug = "2.2.2"
zipp = "3.11.0"
speechrecognition = "^3.10.0"
ffmpeg-python = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"


[tool.poetry.group.web.dependencies]
environs = "^11.0.0"
flask-cors = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79